// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/progressBar renders correctly for different sets of props 1`] = `
<ProgressBar
  decimalPoints={0}
  height="10px"
  lineColor="#0000FF"
  lineColorThresholds={
    Object {
      "#00FF00": 70,
      "#FF0000": 0,
      "#FFFF00": 30,
    }
  }
  max={100}
  min={0}
  value={10}
>
  <div
    className="progress"
    style={
      Object {
        "height": "10px",
        "marginBottom": "15px",
      }
    }
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={10}
      className="progress-bar"
      role="progressbar"
      style={
        Object {
          "backgroundColor": "#FF0000",
          "width": "10%",
        }
      }
    />
  </div>
</ProgressBar>
`;

exports[`components/progressBar renders correctly for different sets of props 2`] = `
Object {
  "backgroundColor": "#FF0000",
  "width": "10%",
}
`;

exports[`components/progressBar renders correctly for different sets of props1 1`] = `
<ProgressBar
  decimalPoints={0}
  height="10px"
  lineColor="#5269EB"
  lineColorThresholds={
    Object {
      "#00FF00": 70,
      "#FF0000": 0,
      "#FFFF00": 30,
    }
  }
  max={100}
  min={0}
  value={40}
>
  <div
    className="progress"
    style={
      Object {
        "height": "10px",
        "marginBottom": "15px",
      }
    }
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={40}
      className="progress-bar"
      role="progressbar"
      style={
        Object {
          "backgroundColor": "#FFFF00",
          "width": "40%",
        }
      }
    />
  </div>
</ProgressBar>
`;

exports[`components/progressBar renders correctly for different sets of props1 2`] = `
Object {
  "backgroundColor": "#FFFF00",
  "width": "40%",
}
`;

exports[`components/progressBar renders correctly for different sets of props2 1`] = `
<ProgressBar
  decimalPoints={0}
  height="10px"
  lineColor="#5269EB"
  lineColorThresholds={
    Object {
      "#00FF00": 70,
      "#FF0000": 0,
      "#FFFF00": 30,
    }
  }
  max={100}
  min={0}
  value={70}
>
  <div
    className="progress"
    style={
      Object {
        "height": "10px",
        "marginBottom": "15px",
      }
    }
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={70}
      className="progress-bar"
      role="progressbar"
      style={
        Object {
          "backgroundColor": "#00FF00",
          "width": "70%",
        }
      }
    />
  </div>
</ProgressBar>
`;

exports[`components/progressBar renders correctly for different sets of props2 2`] = `
Object {
  "backgroundColor": "#00FF00",
  "width": "70%",
}
`;

exports[`components/progressBar renders correctly for the default props 1`] = `
<ProgressBar
  decimalPoints={0}
  height="10px"
  lineColor="#0000FF"
  max={100}
  min={0}
  value={50}
>
  <div
    className="progress"
    style={
      Object {
        "height": "10px",
        "marginBottom": "15px",
      }
    }
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={50}
      className="progress-bar"
      role="progressbar"
      style={
        Object {
          "backgroundColor": "#0000FF",
          "width": "50%",
        }
      }
    />
  </div>
</ProgressBar>
`;

exports[`components/progressBar renders correctly for the default props 2`] = `
Object {
  "backgroundColor": "#0000FF",
  "width": "50%",
}
`;

exports[`components/progressBar renders correctly for the default props 3`] = `
Object {
  "aria-valuemax": 100,
  "aria-valuemin": 0,
  "aria-valuenow": 50,
  "className": "progress-bar",
  "role": "progressbar",
  "style": Object {
    "backgroundColor": "#0000FF",
    "width": "50%",
  },
}
`;

exports[`components/progressBar uses lineColor if threshholds is not given 1`] = `
Object {
  "backgroundColor": "#FFFF00",
  "width": "70%",
}
`;

exports[`components/progressBar uses lineColor if threshholds is not given 2`] = `
<ProgressBar
  decimalPoints={0}
  height="10px"
  lineColor="#FFFF00"
  max={100}
  min={0}
  value={70}
>
  <div
    className="progress"
    style={
      Object {
        "height": "10px",
        "marginBottom": "15px",
      }
    }
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={70}
      className="progress-bar"
      role="progressbar"
      style={
        Object {
          "backgroundColor": "#FFFF00",
          "width": "70%",
        }
      }
    />
  </div>
</ProgressBar>
`;
